# gerbil_vocalization_analysis

./: .gitignore  main.py  pyproject.toml
scripts/: combine_exp_calls.py  run_average_audio_batch.py  run_call_rate.py  run_rms_assignment.py  run_transitions.py
slurm/: average-audio-array.sh
vocalization_analysis/: Pre_process_A.ipynb  __init__.py  audio_processing_config.py  average_audio_files.ipynb  calc_transitions.py  check_audio_processing_consistency.ipynb  combine_log_files_by_date.ipynb  create_vox_csv.ipynb  find_das_completed_experiments.ipynb  pre_process_B.ipynb
vocalization_analysis/pipelines/: __init__.py  average_audio.py  rms_assignment.py
