[project]
name = "gerbil-vocalization-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[project.scripts]
gerbil-average-audio = "vocalization_analysis.pipelines.average_audio:main"
gerbil-rms-assignment = "vocalization_analysis.pipelines.rms_assignment:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
